service method change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8070
 
 # Configure Data Base
 spring.datasource.url = jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username = surveyportal
-spring.datasource.password = sp
+spring.datasource.username = hr
+spring.datasource.password = hr
 spring.datasource.driver-class-name = oracle.jdbc.driver.OracleDriver
 
 
